--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="./web-preview.png" />
     <meta property="og:title" content="Age Calculator" />
-    <meta property="og:description" content="Track every day since your birth or special dates with this sleek Vue-powered Age Calculator app—cherish memories, count moments! ✨" />
+    <meta property="og:description" content="Track every day since your birth or special dates with this sleek Vue-powered Age Calculator app—cherish memories, count moments!" />
     <title>Age Calculator</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
